RESOLVED FIXED22857
WML deck-to-deck transitions fail
https://bugs.webkit.org/show_bug.cgi?id=22857
Summary WML deck-to-deck transitions fail
Nikolas Zimmermann
Reported 2008-12-14 15:18:01 PST
Switching from one card to another in a deck using a <go> task fails. Cache policy is set to ReturnCacheDataDontLoad for the default GET method, which creates problems on Mac. We also do too much work for internal deck jumps (setActiveCardInDocument shouldn't be called from WMLGoElement::executeTask, for internal deck jumps).
Attachments
Initial patch (8.01 KB, patch)
2008-12-14 15:23 PST, Nikolas Zimmermann
staikos: review+
LayoutTests (5.80 KB, patch)
2008-12-14 15:23 PST, Nikolas Zimmermann
staikos: review+
Nikolas Zimmermann
Comment 1 2008-12-14 15:23:28 PST
Created attachment 26015 [details] Initial patch Found a way to fix deck-to-deck transitions, Yichao may be interessted in this patch, as we discussed on Skype before :-)
Nikolas Zimmermann
Comment 2 2008-12-14 15:23:50 PST
Created attachment 26016 [details] LayoutTests
Nikolas Zimmermann
Comment 3 2008-12-14 15:37:51 PST
Landed in r39294.
Note You need to log in before you can comment on or make changes to this bug.