Reviewed by George Staikos.

Fixes: https://bugs.webkit.org/show_bug.cgi?id=22857

Jumps within a WML deck using <go> task elements fail. Manual reloading
is necessary to display the page - fix cache-policy in WMLGoElement::executeTask
to prevent the problem.

Refactor setActiveCardInDocument in two new functions: findNamedCardInDocument
and determineActiveCard, to fix a side-effect of executing a <go> task:
when switching cards within a deck the active card was changed before the load
was fired which resulted in a flash effect on the screen, and doing unnecessary work.

Test: wml/go-task-animation.html


Canonical link: https://commits.webkit.org/31498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39294 268f45cc-cd09-0410-ab3c-d52691b4dbfc